scroll reveal changes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <script src="https://kit.fontawesome.com/b46fae7a09.js" crossorigin="anonymous"></script>
      <!-- Scroll Reveal Js-->
      <script src="https://unpkg.com/scrollreveal"></script>
-     <script>
-         ScrollReveal.debug = true;
-     </script>
 </head>
 
 <body>
@@ -462,7 +459,7 @@
         sr.reveal('footer', {
             duration: 2000,
             distance: '200px',
-            origin: 'bottom'
+            origin: 'left'
         });
         
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
