--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <section class="team text-center" id="team">
         <div class="container p-5">
             <h1 class="text-white">Team</h1>
-            <p class="text-white">Sic Mundus Creatus Est</p>
+            <p class="text-white">Sic Mundus Creatus Est/Thus the world was created</p>
                 <div class="row">
                     <!--Member-->
                     <div class="col-lg-3">
